--- a/.harness/test.yaml
+++ b/.harness/test.yaml
@@ -23,10 +23,7 @@ pipeline:
                     source:
                       type: Inline
                       spec:
-                        script: |-
-                          pwd
-                          whoami
-                          ls -la 
+                        script: pwd
                     environmentVariables: []
                     outputVariables: []
                   timeout: 10m
