Update pipeline test

--- a/.harness/test.yaml
+++ b/.harness/test.yaml
@@ -23,7 +23,7 @@ pipeline:
                     source:
                       type: Inline
                       spec:
-                        script: pwd
+                        script: docker pull hello-world
                     environmentVariables: []
                     outputVariables: []
                   timeout: 10m
